@@ -386,6 +386,7 @@ FBFONT		(just like in fbi) a Linux consolefont font file.
 If using a gzipped font, the zcat program will be used to uncompress it (via \fBexecvp(3)\fP).
 If not specified, the following files will be probed and the first existing will be selected:
 
+/usr/share/consolefonts/Lat15-Terminus16.psf.gz
 /usr/share/kbd/consolefonts/cp866-8x16.psf.gz
 /usr/share/consolefonts/Uni3-TerminusBoldVGA14.psf.gz
 /usr/lib/kbd/consolefonts/lat9-16.psf.gz
